Add Gradient boost classifier

--- a/Smoking and drinking classification/8_GradBoost.ipynb
+++ b/Smoking and drinking classification/8_GradBoost.ipynb
@@ -60,7 +60,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -80,7 +80,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -96,7 +96,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
@@ -294,7 +294,7 @@
        "[5 rows x 24 columns]"
       ]
      },
-     "execution_count": 3,
+     "execution_count": 13,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -347,7 +347,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [
     {
@@ -380,7 +380,7 @@
        "dtype: int64"
       ]
      },
-     "execution_count": 4,
+     "execution_count": 14,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -419,7 +419,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [
     {
@@ -428,7 +428,7 @@
        "26"
       ]
      },
-     "execution_count": 5,
+     "execution_count": 15,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -446,7 +446,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [
     {
@@ -486,7 +486,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [
     {
@@ -520,7 +520,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [
     {
@@ -1142,7 +1142,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [
     {
@@ -1225,7 +1225,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [
     {
@@ -1312,7 +1312,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [
     {
@@ -1389,7 +1389,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 22,
    "metadata": {},
    "outputs": [
     {
@@ -1459,7 +1459,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 23,
    "metadata": {},
    "outputs": [
     {
@@ -1531,7 +1531,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 24,
    "metadata": {},
    "outputs": [
     {
@@ -1540,7 +1540,7 @@
        "<Axes: ylabel='waistline'>"
       ]
      },
-     "execution_count": 14,
+     "execution_count": 24,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -1568,7 +1568,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 25,
    "metadata": {},
    "outputs": [
     {
@@ -1773,7 +1773,7 @@
        "[5 rows x 24 columns]"
       ]
      },
-     "execution_count": 15,
+     "execution_count": 25,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1798,7 +1798,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 26,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1816,7 +1816,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 27,
    "metadata": {},
    "outputs": [
     {
@@ -1825,7 +1825,7 @@
        "<Axes: ylabel='waistline'>"
       ]
      },
-     "execution_count": 17,
+     "execution_count": 27,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -1853,7 +1853,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 28,
    "metadata": {},
    "outputs": [
     {
@@ -1946,7 +1946,7 @@
        "[1 rows x 24 columns]"
       ]
      },
-     "execution_count": 18,
+     "execution_count": 28,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1964,7 +1964,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 29,
    "metadata": {},
    "outputs": [
     {
@@ -1973,7 +1973,7 @@
        "<Axes: ylabel='waistline'>"
       ]
      },
-     "execution_count": 19,
+     "execution_count": 29,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -2009,7 +2009,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 30,
    "metadata": {},
    "outputs": [
     {
@@ -2018,7 +2018,7 @@
        "<Axes: ylabel='HDL_chole'>"
       ]
      },
-     "execution_count": 20,
+     "execution_count": 30,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -2046,7 +2046,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 31,
    "metadata": {},
    "outputs": [
     {
@@ -2139,7 +2139,7 @@
        "[1 rows x 24 columns]"
       ]
      },
-     "execution_count": 21,
+     "execution_count": 31,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2157,7 +2157,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 32,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2180,7 +2180,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 33,
    "metadata": {},
    "outputs": [
     {
@@ -2189,7 +2189,7 @@
        "<Axes: ylabel='LDL_chole'>"
       ]
      },
-     "execution_count": 23,
+     "execution_count": 33,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -2231,7 +2231,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 34,
    "metadata": {},
    "outputs": [
     {
@@ -2240,7 +2240,7 @@
        "<Axes: ylabel='triglyceride'>"
       ]
      },
-     "execution_count": 24,
+     "execution_count": 34,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -2268,7 +2268,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 35,
    "metadata": {},
    "outputs": [
     {
@@ -2417,7 +2417,7 @@
        "[3 rows x 24 columns]"
       ]
      },
-     "execution_count": 25,
+     "execution_count": 35,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2435,7 +2435,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 36,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2458,7 +2458,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 37,
    "metadata": {},
    "outputs": [
     {
@@ -2467,7 +2467,7 @@
        "<Axes: ylabel='SGOT_ALT'>"
       ]
      },
-     "execution_count": 27,
+     "execution_count": 37,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -2498,7 +2498,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 38,
    "metadata": {},
    "outputs": [
     {
@@ -2703,7 +2703,7 @@
        "[5 rows x 24 columns]"
       ]
      },
-     "execution_count": 28,
+     "execution_count": 38,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2721,7 +2721,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 39,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2806,7 +2806,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 40,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2823,7 +2823,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 41,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2838,7 +2838,14 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Ансамблевые модели: градиентный бустинг <a id=\"335\"></a>"
+    "## Обучение модели <a id=\"33\"></a>"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Ансамблевые модели: градиентный бустинг <a id=\"334\"></a>"
    ]
   },
   {
@@ -2917,7 +2924,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 36,
+   "execution_count": 42,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2938,10 +2945,159 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": 43,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Создаем стандартизатор\n",
+    "standardizer = StandardScaler()\n",
+    "\n",
+    "# Создаем классификатор\n",
+    "clf = XGBClassifier(random_state=42)\n",
+    "\n",
+    "# Создаём конвейер\n",
+    "pipe = Pipeline([(\"standardizer\", standardizer), (\"gradient\", clf)])"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "ВСТАВИТЬ РЕАЛИЗАЦИЮ ГРАДИЕНТНОГО БУСТИНГА"
+    "Диапазон тестирования параметров модели ограничен лишь вычислительной мощностью. Поэтому определим набор параметров, которые будут проверятся при кросс-валидации:"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 53,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from skopt import BayesSearchCV\n",
+    "from skopt.space import Real, Integer\n",
+    "\n",
+    "params = {\n",
+    "    \"gradient__max_depth\": Integer(10, 20),\n",
+    "    \"gradient__learning_rate\": Real(0.001, 1.0, prior='log-uniform'),\n",
+    "    'gradient__subsample': Real(0.0, 1.0),\n",
+    "    'gradient__colsample_bytree': Real(0.5, 1.0),\n",
+    "    'gradient__colsample_bylevel': Real(0.0, 1.0),\n",
+    "    'gradient__colsample_bynode' : Real(0.5, 1.0),\n",
+    "    'gradient__reg_alpha': Real(10.0, 20.0),\n",
+    "    'gradient__reg_lambda': Real(0.0, 10.0),\n",
+    "    'gradient__gamma': Real(0.0, 10.0)\n",
+    "}\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Запустим процесс валидации и выведем оптимальные параметры для данного классификатора."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 54,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Fitting 5 folds for each of 1 candidates, totalling 5 fits\n",
+      "Fitting 5 folds for each of 1 candidates, totalling 5 fits\n",
+      "Fitting 5 folds for each of 1 candidates, totalling 5 fits\n",
+      "Fitting 5 folds for each of 1 candidates, totalling 5 fits\n",
+      "Fitting 5 folds for each of 1 candidates, totalling 5 fits\n",
+      "Fitting 5 folds for each of 1 candidates, totalling 5 fits\n",
+      "Fitting 5 folds for each of 1 candidates, totalling 5 fits\n",
+      "Fitting 5 folds for each of 1 candidates, totalling 5 fits\n",
+      "Fitting 5 folds for each of 1 candidates, totalling 5 fits\n",
+      "Fitting 5 folds for each of 1 candidates, totalling 5 fits\n",
+      "Fitting 5 folds for each of 1 candidates, totalling 5 fits\n",
+      "Fitting 5 folds for each of 1 candidates, totalling 5 fits\n",
+      "Fitting 5 folds for each of 1 candidates, totalling 5 fits\n",
+      "Fitting 5 folds for each of 1 candidates, totalling 5 fits\n",
+      "Fitting 5 folds for each of 1 candidates, totalling 5 fits\n",
+      "Fitting 5 folds for each of 1 candidates, totalling 5 fits\n",
+      "Fitting 5 folds for each of 1 candidates, totalling 5 fits\n",
+      "Fitting 5 folds for each of 1 candidates, totalling 5 fits\n",
+      "Fitting 5 folds for each of 1 candidates, totalling 5 fits\n",
+      "Fitting 5 folds for each of 1 candidates, totalling 5 fits\n",
+      "Fitting 5 folds for each of 1 candidates, totalling 5 fits\n",
+      "Fitting 5 folds for each of 1 candidates, totalling 5 fits\n",
+      "Fitting 5 folds for each of 1 candidates, totalling 5 fits\n",
+      "Fitting 5 folds for each of 1 candidates, totalling 5 fits\n",
+      "Fitting 5 folds for each of 1 candidates, totalling 5 fits\n",
+      "Fitting 5 folds for each of 1 candidates, totalling 5 fits\n",
+      "Fitting 5 folds for each of 1 candidates, totalling 5 fits\n",
+      "Fitting 5 folds for each of 1 candidates, totalling 5 fits\n",
+      "Fitting 5 folds for each of 1 candidates, totalling 5 fits\n",
+      "Fitting 5 folds for each of 1 candidates, totalling 5 fits\n",
+      "Fitting 5 folds for each of 1 candidates, totalling 5 fits\n",
+      "Fitting 5 folds for each of 1 candidates, totalling 5 fits\n",
+      "Fitting 5 folds for each of 1 candidates, totalling 5 fits\n",
+      "Fitting 5 folds for each of 1 candidates, totalling 5 fits\n",
+      "Fitting 5 folds for each of 1 candidates, totalling 5 fits\n",
+      "Fitting 5 folds for each of 1 candidates, totalling 5 fits\n",
+      "Fitting 5 folds for each of 1 candidates, totalling 5 fits\n",
+      "Fitting 5 folds for each of 1 candidates, totalling 5 fits\n",
+      "Fitting 5 folds for each of 1 candidates, totalling 5 fits\n",
+      "Fitting 5 folds for each of 1 candidates, totalling 5 fits\n",
+      "Fitting 5 folds for each of 1 candidates, totalling 5 fits\n",
+      "Fitting 5 folds for each of 1 candidates, totalling 5 fits\n",
+      "Fitting 5 folds for each of 1 candidates, totalling 5 fits\n",
+      "Fitting 5 folds for each of 1 candidates, totalling 5 fits\n",
+      "Fitting 5 folds for each of 1 candidates, totalling 5 fits\n",
+      "Fitting 5 folds for each of 1 candidates, totalling 5 fits\n",
+      "Fitting 5 folds for each of 1 candidates, totalling 5 fits\n",
+      "Fitting 5 folds for each of 1 candidates, totalling 5 fits\n",
+      "Fitting 5 folds for each of 1 candidates, totalling 5 fits\n",
+      "Fitting 5 folds for each of 1 candidates, totalling 5 fits\n",
+      "CPU times: total: 1min 27s\n",
+      "Wall time: 14min 36s\n"
+     ]
+    }
+   ],
+   "source": [
+    "%%time\n",
+    "%%chime\n",
+    "gradient_classifier = BayesSearchCV(\n",
+    "    estimator=pipe, \n",
+    "    search_spaces=params,\n",
+    "    cv=5, verbose=1, \n",
+    "    n_jobs=-3, \n",
+    "    scoring=\"roc_auc\").fit(\n",
+    "    x_train, y_train\n",
+    ")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "После завершения этапа обучения выведем наилучшую комбинацию параметров, а также наилучшую оценку, полученную на тренировочных данных."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 55,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Оптимальные параметры: OrderedDict([('gradient__colsample_bylevel', 1.0), ('gradient__colsample_bynode', 0.9512654807439095), ('gradient__colsample_bytree', 1.0), ('gradient__gamma', 5.161889032807183), ('gradient__learning_rate', 0.12711773645797664), ('gradient__max_depth', 18), ('gradient__reg_alpha', 10.535168459663316), ('gradient__reg_lambda', 7.602169440366336), ('gradient__subsample', 0.9490731515481637)])\n",
+      "Наилучшая оценка: 82.17%\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(\n",
+    "    f\"Оптимальные параметры: {gradient_classifier.best_params_}\\nНаилучшая оценка: {gradient_classifier.best_score_:.2%}\"\n",
+    ")"
    ]
   }
  ],
@@ -2961,7 +3117,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.11.7"
+   "version": "3.11.9"
   }
  },
  "nbformat": 4,
