--- a/Smoking and drinking classification/1_EDA.ipynb
+++ b/Smoking and drinking classification/1_EDA.ipynb
@@ -62,7 +62,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 181,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -82,7 +82,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 182,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -98,7 +98,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 183,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -296,7 +296,7 @@
        "[5 rows x 24 columns]"
       ]
      },
-     "execution_count": 183,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -349,7 +349,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 184,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -382,7 +382,7 @@
        "dtype: int64"
       ]
      },
-     "execution_count": 184,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -421,7 +421,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 185,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -430,7 +430,7 @@
        "26"
       ]
      },
-     "execution_count": 185,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -448,7 +448,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 186,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -488,7 +488,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 187,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -522,7 +522,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 188,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -1144,7 +1144,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 189,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
@@ -1227,7 +1227,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 190,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
@@ -1314,7 +1314,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 191,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
@@ -1391,7 +1391,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 192,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
@@ -1469,7 +1469,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 193,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [
     {
@@ -1568,7 +1568,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 194,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1620,7 +1620,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 195,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [
     {
@@ -1666,7 +1666,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 196,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [
     {
@@ -1815,7 +1815,7 @@
        "max      5119.000000    9490.000000    9999.000000    7210.000000  "
       ]
      },
-     "execution_count": 196,
+     "execution_count": 18,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1840,7 +1840,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 197,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [
     {
@@ -1849,7 +1849,7 @@
        "<Axes: xlabel='waistline', ylabel='Count'>"
       ]
      },
-     "execution_count": 197,
+     "execution_count": 19,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -1877,7 +1877,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 198,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [
     {
@@ -1886,7 +1886,7 @@
        "57"
       ]
      },
-     "execution_count": 198,
+     "execution_count": 20,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1911,7 +1911,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 199,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1929,7 +1929,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 200,
+   "execution_count": 22,
    "metadata": {},
    "outputs": [
     {
@@ -1938,7 +1938,7 @@
        "<Axes: ylabel='waistline'>"
       ]
      },
-     "execution_count": 200,
+     "execution_count": 22,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -1966,7 +1966,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 201,
+   "execution_count": 23,
    "metadata": {},
    "outputs": [
     {
@@ -2059,7 +2059,7 @@
        "[1 rows x 24 columns]"
       ]
      },
-     "execution_count": 201,
+     "execution_count": 23,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2077,7 +2077,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 202,
+   "execution_count": 24,
    "metadata": {},
    "outputs": [
     {
@@ -2086,7 +2086,7 @@
        "<Axes: xlabel='waistline', ylabel='Count'>"
       ]
      },
-     "execution_count": 202,
+     "execution_count": 24,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -2122,7 +2122,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 203,
+   "execution_count": 25,
    "metadata": {},
    "outputs": [
     {
@@ -2131,7 +2131,7 @@
        "<Axes: ylabel='HDL_chole'>"
       ]
      },
-     "execution_count": 203,
+     "execution_count": 25,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -2159,7 +2159,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 204,
+   "execution_count": 26,
    "metadata": {},
    "outputs": [
     {
@@ -2252,7 +2252,7 @@
        "[1 rows x 24 columns]"
       ]
      },
-     "execution_count": 204,
+     "execution_count": 26,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2270,7 +2270,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 205,
+   "execution_count": 27,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2293,7 +2293,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 206,
+   "execution_count": 28,
    "metadata": {},
    "outputs": [
     {
@@ -2302,7 +2302,7 @@
        "<Axes: ylabel='LDL_chole'>"
       ]
      },
-     "execution_count": 206,
+     "execution_count": 28,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -2344,7 +2344,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 207,
+   "execution_count": 29,
    "metadata": {},
    "outputs": [
     {
@@ -2353,7 +2353,7 @@
        "<Axes: ylabel='triglyceride'>"
       ]
      },
-     "execution_count": 207,
+     "execution_count": 29,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -2381,7 +2381,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 208,
+   "execution_count": 30,
    "metadata": {},
    "outputs": [
     {
@@ -2530,7 +2530,7 @@
        "[3 rows x 24 columns]"
       ]
      },
-     "execution_count": 208,
+     "execution_count": 30,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2548,7 +2548,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 209,
+   "execution_count": 31,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2571,7 +2571,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 210,
+   "execution_count": 32,
    "metadata": {},
    "outputs": [
     {
@@ -2580,7 +2580,7 @@
        "<Axes: ylabel='SGOT_ALT'>"
       ]
      },
-     "execution_count": 210,
+     "execution_count": 32,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -2611,7 +2611,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 211,
+   "execution_count": 33,
    "metadata": {},
    "outputs": [
     {
@@ -2816,7 +2816,7 @@
        "[5 rows x 24 columns]"
       ]
      },
-     "execution_count": 211,
+     "execution_count": 33,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2834,7 +2834,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 212,
+   "execution_count": 34,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2844,7 +2844,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 213,
+   "execution_count": 35,
    "metadata": {},
    "outputs": [
     {
@@ -2853,7 +2853,7 @@
        "<Axes: ylabel='SGOT_ALT'>"
       ]
      },
-     "execution_count": 213,
+     "execution_count": 35,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -2877,7 +2877,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 214,
+   "execution_count": 36,
    "metadata": {},
    "outputs": [
     {
@@ -3176,7 +3176,7 @@
        "[8 rows x 24 columns]"
       ]
      },
-     "execution_count": 214,
+     "execution_count": 36,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -3194,7 +3194,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 215,
+   "execution_count": 37,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -3257,7 +3257,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 216,
+   "execution_count": 38,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -3274,7 +3274,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 217,
+   "execution_count": 39,
    "metadata": {},
    "outputs": [
     {
@@ -3309,7 +3309,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 218,
+   "execution_count": 40,
    "metadata": {},
    "outputs": [
     {
@@ -3347,7 +3347,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 219,
+   "execution_count": 41,
    "metadata": {},
    "outputs": [
     {
@@ -3390,7 +3390,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 220,
+   "execution_count": 42,
    "metadata": {},
    "outputs": [
     {
@@ -3423,7 +3423,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 221,
+   "execution_count": 43,
    "metadata": {},
    "outputs": [
     {
@@ -3432,7 +3432,7 @@
        "<Axes: xlabel='HDL_chole', ylabel='LDL_chole'>"
       ]
      },
-     "execution_count": 221,
+     "execution_count": 43,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -3471,7 +3471,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 222,
+   "execution_count": 44,
    "metadata": {},
    "outputs": [
     {
@@ -3480,7 +3480,7 @@
        "<Axes: xlabel='hemoglobin', ylabel='Count'>"
       ]
      },
-     "execution_count": 222,
+     "execution_count": 44,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -3536,7 +3536,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 223,
+   "execution_count": 45,
    "metadata": {},
    "outputs": [
     {
@@ -3545,7 +3545,7 @@
        "<Axes: xlabel='SGOT_AST', ylabel='SGOT_ALT'>"
       ]
      },
-     "execution_count": 223,
+     "execution_count": 45,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -3612,7 +3612,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 224,
+   "execution_count": 46,
    "metadata": {},
    "outputs": [
     {
@@ -3652,16 +3652,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 225,
+   "execution_count": 47,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "<seaborn.axisgrid.FacetGrid at 0x218a3491910>"
+       "<seaborn.axisgrid.FacetGrid at 0x23500550310>"
       ]
      },
-     "execution_count": 225,
+     "execution_count": 47,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -3734,7 +3734,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 226,
+   "execution_count": 48,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -3760,7 +3760,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 227,
+   "execution_count": 49,
    "metadata": {},
    "outputs": [
     {
@@ -3800,16 +3800,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 228,
+   "execution_count": 50,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "<seaborn.axisgrid.FacetGrid at 0x2186128ac90>"
+       "<seaborn.axisgrid.FacetGrid at 0x23544f30310>"
       ]
      },
-     "execution_count": 228,
+     "execution_count": 50,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -3859,7 +3859,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 229,
+   "execution_count": 51,
    "metadata": {},
    "outputs": [
     {
@@ -3937,7 +3937,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 230,
+   "execution_count": 52,
    "metadata": {},
    "outputs": [
     {
@@ -3946,7 +3946,7 @@
        "<Axes: xlabel='SBP', ylabel='DBP'>"
       ]
      },
-     "execution_count": 230,
+     "execution_count": 52,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -3981,16 +3981,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 231,
+   "execution_count": 53,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "<seaborn.axisgrid.FacetGrid at 0x218860d3ad0>"
+       "<seaborn.axisgrid.FacetGrid at 0x2350068d9d0>"
       ]
      },
-     "execution_count": 231,
+     "execution_count": 53,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -4031,7 +4031,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 232,
+   "execution_count": 54,
    "metadata": {},
    "outputs": [
     {
@@ -4040,7 +4040,7 @@
        "<Axes: xlabel='HDL_chole', ylabel='LDL_chole'>"
       ]
      },
-     "execution_count": 232,
+     "execution_count": 54,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -4070,16 +4070,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 233,
+   "execution_count": 55,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "<seaborn.axisgrid.FacetGrid at 0x218860b3d10>"
+       "<seaborn.axisgrid.FacetGrid at 0x23500420310>"
       ]
      },
-     "execution_count": 233,
+     "execution_count": 55,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -4120,7 +4120,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 234,
+   "execution_count": 56,
    "metadata": {},
    "outputs": [
     {
@@ -4129,7 +4129,7 @@
        "<Axes: title={'center': 'Уровень гемоглобина'}, xlabel='hemoglobin', ylabel='Count'>"
       ]
      },
-     "execution_count": 234,
+     "execution_count": 56,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -4182,7 +4182,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 235,
+   "execution_count": 57,
    "metadata": {},
    "outputs": [
     {
@@ -4233,7 +4233,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 236,
+   "execution_count": 58,
    "metadata": {},
    "outputs": [
     {
@@ -4278,7 +4278,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 237,
+   "execution_count": 59,
    "metadata": {},
    "outputs": [
     {
@@ -4323,7 +4323,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 238,
+   "execution_count": 60,
    "metadata": {},
    "outputs": [
     {
@@ -4332,7 +4332,7 @@
        "<Axes: >"
       ]
      },
-     "execution_count": 238,
+     "execution_count": 60,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -4397,7 +4397,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.11.5"
+   "version": "3.11.9"
   }
  },
  "nbformat": 4,
