--- a/Smoking and drinking classification/4_LogisticRegression.ipynb
+++ b/Smoking and drinking classification/4_LogisticRegression.ipynb
@@ -26,7 +26,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -38,7 +38,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -47,7 +47,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -245,8 +245,9 @@
        "[5 rows x 24 columns]"
       ]
      },
+     "execution_count": 3,
      "metadata": {},
-     "output_type": "display_data"
+     "output_type": "execute_result"
     }
    ],
    "source": [
@@ -290,7 +291,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -307,7 +308,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -375,7 +376,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -432,7 +433,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -454,7 +455,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -477,7 +478,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -497,23 +498,65 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
-     "ename": "NameError",
-     "evalue": "name 'x_train' is not defined",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[1;31mNameError\u001b[0m                                 Traceback (most recent call last)",
-      "File \u001b[1;32m<timed eval>:1\u001b[0m\n",
-      "File \u001b[1;32md:\\Code\\Lib\\site-packages\\IPython\\core\\interactiveshell.py:2493\u001b[0m, in \u001b[0;36mInteractiveShell.run_cell_magic\u001b[1;34m(self, magic_name, line, cell)\u001b[0m\n\u001b[0;32m   2491\u001b[0m \u001b[38;5;28;01mwith\u001b[39;00m \u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39mbuiltin_trap:\n\u001b[0;32m   2492\u001b[0m     args \u001b[38;5;241m=\u001b[39m (magic_arg_s, cell)\n\u001b[1;32m-> 2493\u001b[0m     result \u001b[38;5;241m=\u001b[39m fn(\u001b[38;5;241m*\u001b[39margs, \u001b[38;5;241m*\u001b[39m\u001b[38;5;241m*\u001b[39mkwargs)\n\u001b[0;32m   2495\u001b[0m \u001b[38;5;66;03m# The code below prevents the output from being displayed\u001b[39;00m\n\u001b[0;32m   2496\u001b[0m \u001b[38;5;66;03m# when using magics with decorator @output_can_be_silenced\u001b[39;00m\n\u001b[0;32m   2497\u001b[0m \u001b[38;5;66;03m# when the last Python token in the expression is a ';'.\u001b[39;00m\n\u001b[0;32m   2498\u001b[0m \u001b[38;5;28;01mif\u001b[39;00m \u001b[38;5;28mgetattr\u001b[39m(fn, magic\u001b[38;5;241m.\u001b[39mMAGIC_OUTPUT_CAN_BE_SILENCED, \u001b[38;5;28;01mFalse\u001b[39;00m):\n",
-      "File \u001b[1;32m~\\AppData\\Roaming\\Python\\Python311\\site-packages\\chime.py:302\u001b[0m, in \u001b[0;36mChimeMagics.chime\u001b[1;34m(self, line, cell, local_ns)\u001b[0m\n\u001b[0;32m    300\u001b[0m     run(line)\n\u001b[0;32m    301\u001b[0m \u001b[38;5;28;01melse\u001b[39;00m:\n\u001b[1;32m--> 302\u001b[0m     run(cell)\n",
-      "File \u001b[1;32m~\\AppData\\Roaming\\Python\\Python311\\site-packages\\chime.py:297\u001b[0m, in \u001b[0;36mChimeMagics.chime.<locals>.run\u001b[1;34m(code)\u001b[0m\n\u001b[0;32m    295\u001b[0m \u001b[38;5;28;01mexcept\u001b[39;00m \u001b[38;5;167;01mException\u001b[39;00m \u001b[38;5;28;01mas\u001b[39;00m e:\n\u001b[0;32m    296\u001b[0m     error()\n\u001b[1;32m--> 297\u001b[0m     \u001b[38;5;28;01mraise\u001b[39;00m e\n",
-      "File \u001b[1;32m~\\AppData\\Roaming\\Python\\Python311\\site-packages\\chime.py:293\u001b[0m, in \u001b[0;36mChimeMagics.chime.<locals>.run\u001b[1;34m(code)\u001b[0m\n\u001b[0;32m    291\u001b[0m \u001b[38;5;28;01mdef\u001b[39;00m \u001b[38;5;21mrun\u001b[39m(code):\n\u001b[0;32m    292\u001b[0m     \u001b[38;5;28;01mtry\u001b[39;00m:\n\u001b[1;32m--> 293\u001b[0m         exec(code, local_ns)\n\u001b[0;32m    294\u001b[0m         success()\n\u001b[0;32m    295\u001b[0m     \u001b[38;5;28;01mexcept\u001b[39;00m \u001b[38;5;167;01mException\u001b[39;00m \u001b[38;5;28;01mas\u001b[39;00m e:\n",
-      "File \u001b[1;32m<string>:7\u001b[0m\n",
-      "\u001b[1;31mNameError\u001b[0m: name 'x_train' is not defined"
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Fitting 5 folds for each of 1 candidates, totalling 5 fits\n",
+      "Fitting 5 folds for each of 1 candidates, totalling 5 fits\n",
+      "Fitting 5 folds for each of 1 candidates, totalling 5 fits\n",
+      "Fitting 5 folds for each of 1 candidates, totalling 5 fits\n",
+      "Fitting 5 folds for each of 1 candidates, totalling 5 fits\n",
+      "Fitting 5 folds for each of 1 candidates, totalling 5 fits\n",
+      "Fitting 5 folds for each of 1 candidates, totalling 5 fits\n",
+      "Fitting 5 folds for each of 1 candidates, totalling 5 fits\n",
+      "Fitting 5 folds for each of 1 candidates, totalling 5 fits\n",
+      "Fitting 5 folds for each of 1 candidates, totalling 5 fits\n",
+      "Fitting 5 folds for each of 1 candidates, totalling 5 fits\n",
+      "Fitting 5 folds for each of 1 candidates, totalling 5 fits\n",
+      "Fitting 5 folds for each of 1 candidates, totalling 5 fits\n",
+      "Fitting 5 folds for each of 1 candidates, totalling 5 fits\n",
+      "Fitting 5 folds for each of 1 candidates, totalling 5 fits\n",
+      "Fitting 5 folds for each of 1 candidates, totalling 5 fits\n",
+      "Fitting 5 folds for each of 1 candidates, totalling 5 fits\n",
+      "Fitting 5 folds for each of 1 candidates, totalling 5 fits\n",
+      "Fitting 5 folds for each of 1 candidates, totalling 5 fits\n",
+      "Fitting 5 folds for each of 1 candidates, totalling 5 fits\n",
+      "Fitting 5 folds for each of 1 candidates, totalling 5 fits\n",
+      "Fitting 5 folds for each of 1 candidates, totalling 5 fits\n",
+      "Fitting 5 folds for each of 1 candidates, totalling 5 fits\n",
+      "Fitting 5 folds for each of 1 candidates, totalling 5 fits\n",
+      "Fitting 5 folds for each of 1 candidates, totalling 5 fits\n",
+      "Fitting 5 folds for each of 1 candidates, totalling 5 fits\n",
+      "Fitting 5 folds for each of 1 candidates, totalling 5 fits\n",
+      "Fitting 5 folds for each of 1 candidates, totalling 5 fits\n",
+      "Fitting 5 folds for each of 1 candidates, totalling 5 fits\n",
+      "Fitting 5 folds for each of 1 candidates, totalling 5 fits\n",
+      "Fitting 5 folds for each of 1 candidates, totalling 5 fits\n",
+      "Fitting 5 folds for each of 1 candidates, totalling 5 fits\n",
+      "Fitting 5 folds for each of 1 candidates, totalling 5 fits\n",
+      "Fitting 5 folds for each of 1 candidates, totalling 5 fits\n",
+      "Fitting 5 folds for each of 1 candidates, totalling 5 fits\n",
+      "Fitting 5 folds for each of 1 candidates, totalling 5 fits\n",
+      "Fitting 5 folds for each of 1 candidates, totalling 5 fits\n",
+      "Fitting 5 folds for each of 1 candidates, totalling 5 fits\n",
+      "Fitting 5 folds for each of 1 candidates, totalling 5 fits\n",
+      "Fitting 5 folds for each of 1 candidates, totalling 5 fits\n",
+      "Fitting 5 folds for each of 1 candidates, totalling 5 fits\n",
+      "Fitting 5 folds for each of 1 candidates, totalling 5 fits\n",
+      "Fitting 5 folds for each of 1 candidates, totalling 5 fits\n",
+      "Fitting 5 folds for each of 1 candidates, totalling 5 fits\n",
+      "Fitting 5 folds for each of 1 candidates, totalling 5 fits\n",
+      "Fitting 5 folds for each of 1 candidates, totalling 5 fits\n",
+      "Fitting 5 folds for each of 1 candidates, totalling 5 fits\n",
+      "Fitting 5 folds for each of 1 candidates, totalling 5 fits\n",
+      "Fitting 5 folds for each of 1 candidates, totalling 5 fits\n",
+      "Fitting 5 folds for each of 1 candidates, totalling 5 fits\n",
+      "CPU times: total: 45.2 s\n",
+      "Wall time: 27min 32s\n"
      ]
     }
    ],
@@ -539,15 +582,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Оптимальные параметры: {'lr__C': 0.44646464646464656, 'lr__l1_ratio': 0.15789473684210525, 'lr__penalty': 'l1'}\n",
-      "Наилучшая оценка: 0.8024099481025649\n"
+      "Оптимальные параметры: OrderedDict([('lr__C', 4.972235551967773), ('lr__l1_ratio', 0.00387986251009187), ('lr__penalty', 'elasticnet')])\n",
+      "Наилучшая оценка: 0.8024097050008816\n"
      ]
     }
    ],
@@ -561,7 +604,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Оптимальные параметры: {'lr__C': 0.44646464646464656, 'lr__l1_ratio': 0.15789473684210525, 'lr__penalty': 'l1'}"
+    "Оптимальные параметры:  OrderedDict([('lr__C', 4.972235551967773), ('lr__l1_ratio', 0.00387986251009187), ('lr__penalty', 'elasticnet')])"
    ]
   },
   {
@@ -588,7 +631,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.11.5"
+   "version": "3.11.9"
   }
  },
  "nbformat": 4,
