--- a/Smoking and drinking classification/5_DecisionTree.ipynb
+++ b/Smoking and drinking classification/5_DecisionTree.ipynb
@@ -26,7 +26,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -38,7 +38,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -47,7 +47,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -245,8 +245,9 @@
        "[5 rows x 24 columns]"
       ]
      },
+     "execution_count": 3,
      "metadata": {},
-     "output_type": "display_data"
+     "output_type": "execute_result"
     }
    ],
    "source": [
@@ -290,7 +291,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -307,7 +308,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -388,7 +389,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -410,7 +411,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -433,7 +434,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -454,72 +455,65 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "n_iterations: 10\n",
-      "n_required_iterations: 10\n",
-      "n_possible_iterations: 7\n",
-      "min_resources_: 1000\n",
-      "max_resources_: 793048\n",
-      "aggressive_elimination: True\n",
-      "factor: 3\n",
-      "----------\n",
-      "iter: 0\n",
-      "n_candidates: 19800\n",
-      "n_resources: 1000\n",
-      "Fitting 5 folds for each of 19800 candidates, totalling 99000 fits\n",
-      "----------\n",
-      "iter: 1\n",
-      "n_candidates: 6600\n",
-      "n_resources: 1000\n",
-      "Fitting 5 folds for each of 6600 candidates, totalling 33000 fits\n",
-      "----------\n",
-      "iter: 2\n",
-      "n_candidates: 2200\n",
-      "n_resources: 1000\n",
-      "Fitting 5 folds for each of 2200 candidates, totalling 11000 fits\n",
-      "----------\n",
-      "iter: 3\n",
-      "n_candidates: 734\n",
-      "n_resources: 1000\n",
-      "Fitting 5 folds for each of 734 candidates, totalling 3670 fits\n",
-      "----------\n",
-      "iter: 4\n",
-      "n_candidates: 245\n",
-      "n_resources: 3000\n",
-      "Fitting 5 folds for each of 245 candidates, totalling 1225 fits\n",
-      "----------\n",
-      "iter: 5\n",
-      "n_candidates: 82\n",
-      "n_resources: 9000\n",
-      "Fitting 5 folds for each of 82 candidates, totalling 410 fits\n",
-      "----------\n",
-      "iter: 6\n",
-      "n_candidates: 28\n",
-      "n_resources: 27000\n",
-      "Fitting 5 folds for each of 28 candidates, totalling 140 fits\n",
-      "----------\n",
-      "iter: 7\n",
-      "n_candidates: 10\n",
-      "n_resources: 81000\n",
-      "Fitting 5 folds for each of 10 candidates, totalling 50 fits\n",
-      "----------\n",
-      "iter: 8\n",
-      "n_candidates: 4\n",
-      "n_resources: 243000\n",
-      "Fitting 5 folds for each of 4 candidates, totalling 20 fits\n",
-      "----------\n",
-      "iter: 9\n",
-      "n_candidates: 2\n",
-      "n_resources: 729000\n",
-      "Fitting 5 folds for each of 2 candidates, totalling 10 fits\n",
-      "CPU times: total: 4min 9s\n",
-      "Wall time: 24min 29s\n"
+      "Fitting 5 folds for each of 1 candidates, totalling 5 fits\n",
+      "Fitting 5 folds for each of 1 candidates, totalling 5 fits\n",
+      "Fitting 5 folds for each of 1 candidates, totalling 5 fits\n",
+      "Fitting 5 folds for each of 1 candidates, totalling 5 fits\n",
+      "Fitting 5 folds for each of 1 candidates, totalling 5 fits\n",
+      "Fitting 5 folds for each of 1 candidates, totalling 5 fits\n",
+      "Fitting 5 folds for each of 1 candidates, totalling 5 fits\n",
+      "Fitting 5 folds for each of 1 candidates, totalling 5 fits\n",
+      "Fitting 5 folds for each of 1 candidates, totalling 5 fits\n",
+      "Fitting 5 folds for each of 1 candidates, totalling 5 fits\n",
+      "Fitting 5 folds for each of 1 candidates, totalling 5 fits\n",
+      "Fitting 5 folds for each of 1 candidates, totalling 5 fits\n",
+      "Fitting 5 folds for each of 1 candidates, totalling 5 fits\n",
+      "Fitting 5 folds for each of 1 candidates, totalling 5 fits\n",
+      "Fitting 5 folds for each of 1 candidates, totalling 5 fits\n",
+      "Fitting 5 folds for each of 1 candidates, totalling 5 fits\n",
+      "Fitting 5 folds for each of 1 candidates, totalling 5 fits\n",
+      "Fitting 5 folds for each of 1 candidates, totalling 5 fits\n",
+      "Fitting 5 folds for each of 1 candidates, totalling 5 fits\n",
+      "Fitting 5 folds for each of 1 candidates, totalling 5 fits\n",
+      "Fitting 5 folds for each of 1 candidates, totalling 5 fits\n",
+      "Fitting 5 folds for each of 1 candidates, totalling 5 fits\n",
+      "Fitting 5 folds for each of 1 candidates, totalling 5 fits\n",
+      "Fitting 5 folds for each of 1 candidates, totalling 5 fits\n",
+      "Fitting 5 folds for each of 1 candidates, totalling 5 fits\n",
+      "Fitting 5 folds for each of 1 candidates, totalling 5 fits\n",
+      "Fitting 5 folds for each of 1 candidates, totalling 5 fits\n",
+      "Fitting 5 folds for each of 1 candidates, totalling 5 fits\n",
+      "Fitting 5 folds for each of 1 candidates, totalling 5 fits\n",
+      "Fitting 5 folds for each of 1 candidates, totalling 5 fits\n",
+      "Fitting 5 folds for each of 1 candidates, totalling 5 fits\n",
+      "Fitting 5 folds for each of 1 candidates, totalling 5 fits\n",
+      "Fitting 5 folds for each of 1 candidates, totalling 5 fits\n",
+      "Fitting 5 folds for each of 1 candidates, totalling 5 fits\n",
+      "Fitting 5 folds for each of 1 candidates, totalling 5 fits\n",
+      "Fitting 5 folds for each of 1 candidates, totalling 5 fits\n",
+      "Fitting 5 folds for each of 1 candidates, totalling 5 fits\n",
+      "Fitting 5 folds for each of 1 candidates, totalling 5 fits\n",
+      "Fitting 5 folds for each of 1 candidates, totalling 5 fits\n",
+      "Fitting 5 folds for each of 1 candidates, totalling 5 fits\n",
+      "Fitting 5 folds for each of 1 candidates, totalling 5 fits\n",
+      "Fitting 5 folds for each of 1 candidates, totalling 5 fits\n",
+      "Fitting 5 folds for each of 1 candidates, totalling 5 fits\n",
+      "Fitting 5 folds for each of 1 candidates, totalling 5 fits\n",
+      "Fitting 5 folds for each of 1 candidates, totalling 5 fits\n",
+      "Fitting 5 folds for each of 1 candidates, totalling 5 fits\n",
+      "Fitting 5 folds for each of 1 candidates, totalling 5 fits\n",
+      "Fitting 5 folds for each of 1 candidates, totalling 5 fits\n",
+      "Fitting 5 folds for each of 1 candidates, totalling 5 fits\n",
+      "Fitting 5 folds for each of 1 candidates, totalling 5 fits\n",
+      "CPU times: total: 29.5 s\n",
+      "Wall time: 5min 37s\n"
      ]
     }
    ],
@@ -545,15 +539,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Оптимальные параметры: {'tree__criterion': 'gini', 'tree__max_depth': 10, 'tree__max_features': 22, 'tree__min_samples_leaf': 49}\n",
-      "Наилучшая оценка: 0.805336366726865\n"
+      "Оптимальные параметры: OrderedDict([('tree__criterion', 'log_loss'), ('tree__max_depth', 10), ('tree__max_features', 23), ('tree__min_samples_leaf', 50)])\n",
+      "Наилучшая оценка: 0.8059523169995811\n"
      ]
     }
    ],
@@ -567,8 +561,8 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Оптимальные параметры: {'tree__criterion': 'gini', 'tree__max_depth': 10, 'tree__max_features': 22, 'tree__min_samples_leaf': 49}\n",
-    "Наилучшая оценка: 0.805336366726865"
+    "Оптимальные параметры: OrderedDict([('tree__criterion', 'log_loss'), ('tree__max_depth', 10), ('tree__max_features', 23), ('tree__min_samples_leaf', 50)])\n",
+    "Наилучшая оценка: 0.8059523169995811"
    ]
   }
  ],
@@ -588,7 +582,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.11.7"
+   "version": "3.11.9"
   }
  },
  "nbformat": 4,
