--- a/Smoking and drinking classification/6_RandomForest.ipynb
+++ b/Smoking and drinking classification/6_RandomForest.ipynb
@@ -25,7 +25,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -37,7 +37,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -46,7 +46,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -244,8 +244,9 @@
        "[5 rows x 24 columns]"
       ]
      },
+     "execution_count": 3,
      "metadata": {},
-     "output_type": "display_data"
+     "output_type": "execute_result"
     }
    ],
    "source": [
@@ -289,7 +290,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -306,7 +307,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -384,15 +385,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": 10,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "The chime extension is already loaded. To reload it, use:\n",
+      "  %reload_ext chime\n"
+     ]
+    }
+   ],
    "source": [
     "from sklearn.ensemble import RandomForestClassifier\n",
     "from sklearn.preprocessing import StandardScaler\n",
     "from sklearn.pipeline import Pipeline\n",
-    "from skopt import BayesSearchCV\n",
-    "from skopt.space import Categorical, Real, Integer\n",
+    "from sklearn.experimental import enable_halving_search_cv\n",
+    "from sklearn.model_selection import HalvingGridSearchCV\n",
     "import chime\n",
     "%load_ext chime "
    ]
@@ -425,7 +435,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 43,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -448,14 +458,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 44,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [],
    "source": [
     "params = {\n",
-    "    \"forest__max_depth\": Integer(13, 15),\n",
-    "    \"forest__max_features\": Integer(10, 18),\n",
-    "    \"forest__min_samples_leaf\": Integer(17, 20),\n",
+    "    \"forest__max_depth\": range(13, 15),\n",
+    "    \"forest__max_features\": range(10, 18),\n",
+    "    \"forest__min_samples_leaf\": range(17, 20),\n",
     "}"
    ]
   },
@@ -468,7 +478,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 45,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
@@ -477,42 +487,43 @@
      "text": [
       "n_iterations: 4\n",
       "n_required_iterations: 4\n",
-      "n_possible_iterations: 7\n",
-      "min_resources_: 1000\n",
+      "n_possible_iterations: 4\n",
+      "min_resources_: 29372\n",
       "max_resources_: 793048\n",
-      "aggressive_elimination: True\n",
+      "aggressive_elimination: False\n",
       "factor: 3\n",
       "----------\n",
       "iter: 0\n",
       "n_candidates: 48\n",
-      "n_resources: 27000\n",
+      "n_resources: 29372\n",
       "Fitting 5 folds for each of 48 candidates, totalling 240 fits\n",
       "----------\n",
       "iter: 1\n",
       "n_candidates: 16\n",
-      "n_resources: 81000\n",
+      "n_resources: 88116\n",
       "Fitting 5 folds for each of 16 candidates, totalling 80 fits\n",
       "----------\n",
       "iter: 2\n",
       "n_candidates: 6\n",
-      "n_resources: 243000\n",
+      "n_resources: 264348\n",
       "Fitting 5 folds for each of 6 candidates, totalling 30 fits\n",
       "----------\n",
       "iter: 3\n",
       "n_candidates: 2\n",
-      "n_resources: 729000\n",
+      "n_resources: 793044\n",
       "Fitting 5 folds for each of 2 candidates, totalling 10 fits\n",
-      "CPU times: total: 53min\n",
-      "Wall time: 1h 39min 12s\n"
+      "CPU times: total: 1h 18min 45s\n",
+      "Wall time: 1h 52min 43s\n"
      ]
     }
    ],
    "source": [
     "%%time\n",
     "%%chime\n",
-    "forest_classifier = BayesSearchCV(\n",
+    "forest_classifier = HalvingGridSearchCV(\n",
     "    estimator=pipe, \n",
-    "    search_spaces=params,\n",
+    "    param_grid=params,\n",
+    "    factor=3,\n",
     "    cv=5, verbose=1, \n",
     "    n_jobs=-3, \n",
     "    scoring=\"roc_auc\").fit(\n",
@@ -529,15 +540,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 47,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Оптимальные параметры: {'forest__max_depth': 14, 'forest__max_features': 10, 'forest__min_samples_leaf': 17}\n",
-      "Наилучшая оценка: 81.81%\n"
+      "Оптимальные параметры: {'forest__max_depth': 14, 'forest__max_features': 11, 'forest__min_samples_leaf': 17}\n",
+      "Наилучшая оценка: 81.84%\n"
      ]
     }
    ],
@@ -572,7 +583,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.11.7"
+   "version": "3.11.9"
   }
  },
  "nbformat": 4,
