--- a/Smoking and drinking classification/7_AdaBoost.ipynb
+++ b/Smoking and drinking classification/7_AdaBoost.ipynb
@@ -26,7 +26,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -38,7 +38,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -47,7 +47,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
@@ -245,8 +245,9 @@
        "[5 rows x 24 columns]"
       ]
      },
+     "execution_count": 13,
      "metadata": {},
-     "output_type": "display_data"
+     "output_type": "execute_result"
     }
    ],
    "source": [
@@ -290,7 +291,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -307,7 +308,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -419,15 +420,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 16,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "The chime extension is already loaded. To reload it, use:\n",
+      "  %reload_ext chime\n"
+     ]
+    }
+   ],
    "source": [
     "from sklearn.ensemble import AdaBoostClassifier\n",
     "from sklearn.preprocessing import StandardScaler\n",
     "from sklearn.pipeline import Pipeline\n",
-    "from skopt import BayesSearchCV\n",
-    "from skopt.space import Categorical, Real, Integer\n",
+    "from sklearn.experimental import enable_halving_search_cv\n",
+    "from sklearn.model_selection import HalvingGridSearchCV\n",
     "import chime\n",
     "%load_ext chime "
    ]
@@ -441,7 +451,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -464,13 +474,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 38,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [],
    "source": [
     "params = {\n",
-    "    \"adaboost__n_estimators\": Integer(150, 200),\n",
-    "    \"adaboost__learning_rate\": Real(0.5, 5),\n",
+    "    \"adaboost__n_estimators\": range(150, 200),\n",
+    "    \"adaboost__learning_rate\": np.arange(0.5, 5),\n",
     "}"
    ]
   },
@@ -483,39 +493,49 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 39,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "n_iterations: 4\n",
-      "n_required_iterations: 4\n",
-      "n_possible_iterations: 7\n",
-      "min_resources_: 1000\n",
+      "n_iterations: 6\n",
+      "n_required_iterations: 6\n",
+      "n_possible_iterations: 5\n",
+      "min_resources_: 3263\n",
       "max_resources_: 793048\n",
       "aggressive_elimination: True\n",
       "factor: 3\n",
       "----------\n",
       "iter: 0\n",
-      "n_candidates: 50\n",
-      "n_resources: 27000\n",
-      "Fitting 5 folds for each of 50 candidates, totalling 250 fits\n",
+      "n_candidates: 250\n",
+      "n_resources: 3263\n",
+      "Fitting 5 folds for each of 250 candidates, totalling 1250 fits\n",
       "----------\n",
       "iter: 1\n",
-      "n_candidates: 17\n",
-      "n_resources: 81000\n",
-      "Fitting 5 folds for each of 17 candidates, totalling 85 fits\n",
+      "n_candidates: 84\n",
+      "n_resources: 3263\n",
+      "Fitting 5 folds for each of 84 candidates, totalling 420 fits\n",
       "----------\n",
       "iter: 2\n",
-      "n_candidates: 6\n",
-      "n_resources: 243000\n",
-      "Fitting 5 folds for each of 6 candidates, totalling 30 fits\n",
+      "n_candidates: 28\n",
+      "n_resources: 9789\n",
+      "Fitting 5 folds for each of 28 candidates, totalling 140 fits\n",
       "----------\n",
       "iter: 3\n",
+      "n_candidates: 10\n",
+      "n_resources: 29367\n",
+      "Fitting 5 folds for each of 10 candidates, totalling 50 fits\n",
+      "----------\n",
+      "iter: 4\n",
+      "n_candidates: 4\n",
+      "n_resources: 88101\n",
+      "Fitting 5 folds for each of 4 candidates, totalling 20 fits\n",
+      "----------\n",
+      "iter: 5\n",
       "n_candidates: 2\n",
-      "n_resources: 729000\n",
+      "n_resources: 264303\n",
       "Fitting 5 folds for each of 2 candidates, totalling 10 fits\n"
      ]
     },
@@ -531,20 +551,22 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "CPU times: total: 2min 31s\n",
-      "Wall time: 15min 15s\n"
+      "CPU times: total: 2min 5s\n",
+      "Wall time: 6min 30s\n"
      ]
     }
    ],
    "source": [
     "%%time\n",
     "%%chime\n",
-    "ada_classifier = BayesSearchCV(\n",
+    "ada_classifier = HalvingGridSearchCV(\n",
     "    estimator=pipe, \n",
-    "    search_spaces=params,\n",
+    "    param_grid=params,\n",
+    "    factor=3,\n",
     "    cv=5, verbose=1, \n",
     "    n_jobs=-3, \n",
-    "    scoring=\"roc_auc\").fit(\n",
+    "    scoring=\"roc_auc\",\n",
+    "    aggressive_elimination=True).fit(\n",
     "    x_train, y_train\n",
     ")"
    ]
@@ -558,15 +580,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 40,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Оптимальные параметры: {'adaboost__n_estimators': 185}\n",
-      "Наилучшая оценка: 81.26%\n"
+      "Оптимальные параметры: {'adaboost__learning_rate': 0.5, 'adaboost__n_estimators': 159}\n",
+      "Наилучшая оценка: 81.21%\n"
      ]
     }
    ],
@@ -574,6 +596,14 @@
     "print(\n",
     "    f\"Оптимальные параметры: {ada_classifier.best_params_}\\nНаилучшая оценка: {ada_classifier.best_score_:.2%}\"\n",
     ")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Оптимальные параметры: {'adaboost__learning_rate': 0.5, 'adaboost__n_estimators': 159}\n",
+    "Наилучшая оценка: 81.21%"
    ]
   }
  ],
@@ -593,7 +623,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.11.7"
+   "version": "3.11.9"
   }
  },
  "nbformat": 4,
