--- a/Smoking and drinking classification/8_GradBoost.ipynb
+++ b/Smoking and drinking classification/8_GradBoost.ipynb
@@ -26,7 +26,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -38,7 +38,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -47,7 +47,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -245,8 +245,9 @@
        "[5 rows x 24 columns]"
       ]
      },
+     "execution_count": 3,
      "metadata": {},
-     "output_type": "display_data"
+     "output_type": "execute_result"
     }
    ],
    "source": [
@@ -290,7 +291,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 40,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -307,7 +308,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 41,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -408,7 +409,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 42,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -430,7 +431,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 43,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -453,7 +454,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 53,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -482,7 +483,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 54,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
@@ -539,8 +540,8 @@
       "Fitting 5 folds for each of 1 candidates, totalling 5 fits\n",
       "Fitting 5 folds for each of 1 candidates, totalling 5 fits\n",
       "Fitting 5 folds for each of 1 candidates, totalling 5 fits\n",
-      "CPU times: total: 1min 27s\n",
-      "Wall time: 14min 36s\n"
+      "CPU times: total: 1min 2s\n",
+      "Wall time: 12min 30s\n"
      ]
     }
    ],
@@ -566,14 +567,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 55,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Оптимальные параметры: OrderedDict([('gradient__colsample_bylevel', 1.0), ('gradient__colsample_bynode', 0.9512654807439095), ('gradient__colsample_bytree', 1.0), ('gradient__gamma', 5.161889032807183), ('gradient__learning_rate', 0.12711773645797664), ('gradient__max_depth', 18), ('gradient__reg_alpha', 10.535168459663316), ('gradient__reg_lambda', 7.602169440366336), ('gradient__subsample', 0.9490731515481637)])\n",
+      "Оптимальные параметры: OrderedDict([('gradient__colsample_bylevel', 0.9452050650024018), ('gradient__colsample_bynode', 1.0), ('gradient__colsample_bytree', 1.0), ('gradient__gamma', 5.966638612389175), ('gradient__learning_rate', 0.08893704430415869), ('gradient__max_depth', 17), ('gradient__reg_alpha', 20.0), ('gradient__reg_lambda', 0.0), ('gradient__subsample', 1.0)])\n",
       "Наилучшая оценка: 82.17%\n"
      ]
     }
@@ -582,6 +583,14 @@
     "print(\n",
     "    f\"Оптимальные параметры: {gradient_classifier.best_params_}\\nНаилучшая оценка: {gradient_classifier.best_score_:.2%}\"\n",
     ")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Оптимальные параметры: OrderedDict([('gradient__colsample_bylevel', 0.9452050650024018), ('gradient__colsample_bynode', 1.0), ('gradient__colsample_bytree', 1.0), ('gradient__gamma', 5.966638612389175), ('gradient__learning_rate', 0.08893704430415869), ('gradient__max_depth', 17), ('gradient__reg_alpha', 20.0), ('gradient__reg_lambda', 0.0), ('gradient__subsample', 1.0)])\n",
+    "Наилучшая оценка: 82.17%"
    ]
   }
  ],
@@ -601,7 +610,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.11.5"
+   "version": "3.11.9"
   }
  },
  "nbformat": 4,
