Add code to get score graph

--- a/Smoking and drinking classification/6_RandomForest.ipynb
+++ b/Smoking and drinking classification/6_RandomForest.ipynb
@@ -540,6 +540,32 @@
   },
   {
    "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "results = pd.DataFrame(forest_classifier.cv_results_)\n",
+    "results[\"params_str\"] = results.params.apply(str)\n",
+    "results.drop_duplicates(subset=(\"params_str\", \"iter\"), inplace=True)\n",
+    "mean_scores = results.pivot(\n",
+    "    index=\"iter\", columns=\"params_str\", values=\"mean_test_score\"\n",
+    ")\n",
+    "ax = mean_scores.plot(legend=False, alpha=0.6)\n",
+    "labels = [\n",
+    "    f\"iter={i}\\nn_samples={forest_classifier.n_resources_[i]}\\nn_candidates={forest_classifier.n_candidates_[i]}\"\n",
+    "    for i in range(forest_classifier.n_iterations_)\n",
+    "]\n",
+    "ax.set_xticks(range(forest_classifier.n_iterations_))\n",
+    "ax.set_xticklabels(labels, rotation=45, multialignment=\"left\")\n",
+    "ax.set_title(\"Оценка всех кандидатов по итерациям\")\n",
+    "ax.set_ylabel(\"средний тестовый результат\")\n",
+    "ax.set_xlabel(\"итерации\")\n",
+    "plt.tight_layout()\n",
+    "plt.show()"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": 13,
    "metadata": {},
    "outputs": [
