--- a/Smoking and drinking classification/check.ipynb
+++ b/Smoking and drinking classification/check.ipynb
@@ -163,6 +163,59 @@
    "source": [
     "### Практическая реализация <a id=\"22\"></a>"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Перед началом оценки всех моделей создадим функцию для оценки модели. На вход данной функции подаётся обученная модель классификатора и тестовый набор данных (`x_test` и `y_test`). Данная функция в качестве результата выведет на экран матрицу неточностей классификатора (*Confusion Matrix*) и ROC-кривую, а под рисунками будут показаны результаты основных метрик оценивания. Код разработанной функции представлен ниже:"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from sklearn.metrics import precision_score, recall_score, f1_score, roc_auc_score\n",
+    "from sklearn.metrics import ConfusionMatrixDisplay, RocCurveDisplay\n",
+    "\n",
+    "def evaluate_model(model, x_test, y_test, model_name: str) -> None:\n",
+    "    pred = model.predict(x_test)\n",
+    "    plt.subplot(1, 2, 1)\n",
+    "    disp = ConfusionMatrixDisplay.from_estimator(model, x_test, y_test, cmap=plt.cm.Blues)\n",
+    "    disp.ax_.set_title(f'Confusion matrix of {model_name}')\n",
+    "\n",
+    "    plt.subplot(1, 2, 2)\n",
+    "    disp = RocCurveDisplay.from_estimator(model, x_test, y_test)\n",
+    "    disp.ax_.set_title(f'ROC Curve of {model_name}')\n",
+    "\n",
+    "    plt.show()\n",
+    "    vals = f'''Оценивание модели {model_name} по параметрам:\n",
+    "    Полнота (Recall): {recall_score(y_test, pred):.4f},\n",
+    "    Точность (Precision): {precision_score(y_test, pred):.4f},\n",
+    "    F1-мера (F1-score): {f1_score(y_test, pred):.4f},\n",
+    "    Площадь под ROC-кривой (AUC ROC): {roc_auc_score(y_test, pred):.4f}'''\n",
+    "    print(vals)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from sklearn.neighbors import KNeighborsClassifier\n",
+    "from sklearn.svm import LinearSVC\n",
+    "from sklearn.linear_model import LogisticRegression\n",
+    "from sklearn.tree import DecisionTreeClassifier\n",
+    "from sklearn.ensemble import RandomForestClassifier\n",
+    "from sklearn.ensemble import AdaBoostClassifier\n",
+    "from xgboost import XGBClassifier\n",
+    "from sklearn.ensemble import StackingClassifier\n",
+    "from sklearn.preprocessing import StandardScaler\n",
+    "from sklearn.pipeline import Pipeline"
+   ]
   }
  ],
  "metadata": {
